Fix text-align for ul on mobile

--- a/style.css
+++ b/style.css
@@ -281,6 +281,7 @@ footer {
 
   ul {
     padding-inline-start: 20px;
+    text-align: left;
   }
 
   .content {
